--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,7 @@
 
 			<plugin>
 				<artifactId>maven-gpg-plugin</artifactId>
+					<version>1.6</version>
 				<executions>
 					<execution>
 						<id>sign-artifacts</id>
@@ -241,6 +242,7 @@
 
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.0.0-M1</version>
 				<executions>
 					<execution>
 						<id>bintray-deploy</id>
