Change update policy

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 			</releases>
 			<snapshots>
 				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
+				<!-- <updatePolicy>always</updatePolicy> -->
 			</snapshots>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</repository>
