--- a/pom.xml
+++ b/pom.xml
@@ -327,14 +327,54 @@
 				<version>0.8.5</version>
 				<executions>
 					<execution>
+						<id>pre-unit-test</id>
 						<goals>
 							<goal>prepare-agent</goal>
-							<goal>prepare-agent-integration</goal>
+						</goals>
+					</execution>
+
+					<execution>
+						<id>post-unit-test</id>
+						<phase>test</phase>
+						<goals>
 							<goal>report</goal>
 						</goals>
 					</execution>
+
+					<execution>
+						<id>pre-integration-test</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<propertyName>invoker.mavenOpts</propertyName>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>post-integration-test</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+						</configuration>
+					</execution>
+
+					<!-- <execution> <goals> <goal>prepare-agent</goal> <goal>prepare-agent-integration</goal>
+						<goal>report</goal> </goals> </execution> -->
 				</executions>
 			</plugin>
+
+
+
+
+
+
+
+			<!-- -->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
