--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,13 @@
 						<version>1.9.1</version>
 					</dependency>
 
+					<dependency>
+						<groupId>org.apache.maven.doxia</groupId>
+						<artifactId>doxia-sink-api</artifactId>
+						<version>1.9.1</version>
+					</dependency>
+
+
 				</dependencies>
 
 			</plugin>
@@ -348,6 +355,7 @@
 							<goal>prepare-agent</goal>
 						</goals>
 						<configuration>
+							<destFile>${project.build.directory}/jacoco-it.exec</destFile>
 							<propertyName>invoker.mavenOpts</propertyName>
 						</configuration>
 					</execution>
@@ -359,22 +367,14 @@
 							<goal>report</goal>
 						</goals>
 						<configuration>
+							<dataFile>${project.build.directory}/jacoco-it.exec</dataFile>
 							<outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
 						</configuration>
 					</execution>
-
-					<!-- <execution> <goals> <goal>prepare-agent</goal> <goal>prepare-agent-integration</goal>
-						<goal>report</goal> </goals> </execution> -->
 				</executions>
+
+
 			</plugin>
-
-
-
-
-
-
-
-			<!-- -->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -454,6 +454,7 @@
 					<reportSet>
 						<reports>
 							<report>report</report>
+							<report>report-integration</report>
 						</reports>
 					</reportSet>
 				</reportSets>
