--- a/pom.xml
+++ b/pom.xml
@@ -332,6 +332,9 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
+				<configuration>
+					<excludes><exclude>it/serendigity/**/HelpMojo.class</exclude></excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<id>pre-unit-test</id>
