--- a/pom.xml
+++ b/pom.xml
@@ -333,8 +333,11 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
 				<configuration>
-					<excludes><exclude>it/serendigity/**/HelpMojo.class</exclude></excludes>
+					<excludes>
+						<exclude>it/serendigity/**/HelpMojo.*</exclude>
+					</excludes>
 				</configuration>
+
 				<executions>
 					<execution>
 						<id>pre-unit-test</id>
@@ -367,7 +370,7 @@
 						<id>post-integration-test</id>
 						<phase>post-integration-test</phase>
 						<goals>
-							<goal>report</goal>
+							<goal>report-integration</goal>
 						</goals>
 						<configuration>
 							<dataFile>${project.build.directory}/jacoco-it.exec</dataFile>
