--- a/pom.xml
+++ b/pom.xml
@@ -456,6 +456,12 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
+				<configuration>
+					<excludes>
+						<exclude>it/serendigity/**/HelpMojo.*</exclude>
+					</excludes>
+				</configuration>
+
 				<reportSets>
 					<reportSet>
 						<reports>
