--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: java
 
 jdk:
  - openjdk8
+
+# cache the build tool's caches
+cache:
+  directories:
+  - $HOME/.m2
+
+script:
+  - ./mvn clean verify
