--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ language: java
 jdk:
  - openjdk8
 
+sudo: false
+
 # cache the build tool's caches
 cache:
   directories:
   - $HOME/.m2
 
-script:
-  - ./mvnw clean verify
+script: mvn clean verify
