Add session on jacoco

--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,7 @@
 					<excludes>
 						<exclude>it/serendigity/**/HelpMojo.*</exclude>
 					</excludes>
+					<sessionId>jacoco-session-id</sessionId>
 				</configuration>
 
 				<executions>
