--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	</developers>
 
 	<scm>
-		<url>https://github.com/serendipity-projects/${project.artifactId}.git</url>
+		<url>https://github.com/serendipity-projects/${project.artifactId}</url>
 		<connection>scm:git:git://github.com/serendipity-projects/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:serendipity-projects/${project.artifactId}.git</developerConnection>
 		<tag>HEAD</tag>
