--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	</developers>
 
 	<scm>
-		<url>https://github.com/serendipity-projects/${project.artifactId}</url>
+		<url>https://github.com/serendipity-projects</url>
 		<connection>scm:git:git://github.com/serendipity-projects/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:serendipity-projects/${project.artifactId}.git</developerConnection>
 		<tag>HEAD</tag>
@@ -62,7 +62,7 @@
 
 	<ciManagement>
 		<system>travis-ci</system>
-		<url>https://travis-ci.org/serendipity-projects/${project.artifactId}</url>
+		<url>https://travis-ci.com/github/serendipity-projects/${project.artifactId}</url>
 	</ciManagement>
 
 	<issueManagement>
@@ -404,11 +404,16 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9</version>
+				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
 				<reportSets>
+
 					<reportSet><!-- by default, id = "default" -->
 						<reports><!-- select non-aggregate reports -->
 							<report>javadoc</report>
 							<report>test-javadoc</report>
+
 						</reports>
 					</reportSet>
 					<reportSet>
@@ -420,6 +425,7 @@
 							<report>aggregate</report>
 						</reports>
 					</reportSet>
+
 
 
 				</reportSets>
