--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,16 @@
 	</properties>
 
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>nl.jqno.equalsverifier</groupId>
+				<artifactId>equalsverifier</artifactId>
+				<version>3.4.2</version>
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -136,7 +146,7 @@
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.17.0</version>
+			<version>3.17.1</version>
 			<scope>test</scope>
 		</dependency>
 
