--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,8 @@
 
 	<properties>
 
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<junit.version>5.7.0-RC1</junit.version>
@@ -186,11 +186,11 @@
 							<goal>enforce</goal>
 						</goals>
 						<phase>validate</phase>
-						<!-- only JAVA 8 -->
+						<!-- require java 11 -->
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<version>[1.8.0,1.8.9]</version>
+									<version>[11,)</version>
 								</requireJavaVersion>
 							</rules>
 							<fail>true</fail>
