--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<junit.version>5.7.0-RC1</junit.version>
 		<log4j.version>2.13.3</log4j.version>
-
+		<javadoc.plugin.version>3.2.0</javadoc.plugin.version>
 
 		<!-- SITE properties -->
 		<site.input.directory>${project.reporting.outputDirectory}</site.input.directory>
@@ -217,7 +217,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>${javadoc.plugin.version}</version>
 
 				<executions>
 					<!-- Standard javadoc -->
@@ -494,19 +494,27 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9</version>
+				<version>${javadoc.plugin.version}</version>
 				<configuration>
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
 				<reportSets>
 
-					<reportSet><!-- by default, id = "default" -->
-						<reports><!-- select non-aggregate reports -->
+					<reportSet>
+						<reports>
 							<report>javadoc</report>
-							<report>test-javadoc</report>
-
 						</reports>
 					</reportSet>
+
+					<reportSet>
+						<reports>
+							<report>test-javadoc</report>
+						</reports>
+						<configuration>
+							<show>package</show>
+						</configuration>
+					</reportSet>
+
 					<reportSet>
 						<!-- aggregate reportSet (multimodule) -->
 						<id>aggregate</id>
@@ -516,8 +524,6 @@
 							<report>aggregate</report>
 						</reports>
 					</reportSet>
-
-
 
 				</reportSets>
 			</plugin>
