--- a/pom.xml
+++ b/pom.xml
@@ -604,6 +604,12 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>4.0.4</version>
+			</plugin>
+
 		</plugins>
 	</reporting>
 
