--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # JDK
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.11
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
+      # Cache
+      - uses: actions/cache@v1
+      - name: Cache maven deps
+        env:
+          cache-name: cache-maven-deps
+        with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+        ${{ runner.os }}-maven-
+      # Build        
       - name: Build with Maven
         run: mvn -B verify 
