--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
         with:
           java-version: 1.11
       # Cache
-      - uses: actions/cache@v1
       - name: Cache maven deps
+        uses: actions/cache@v1
         env:
           cache-name: cache-maven-deps
         with:
@@ -23,4 +23,6 @@ jobs:
          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
          restore-keys: |
           ${{ runner.os }}-maven-
-      
+      # Build        
+      - name: Build with Maven
+        run: mvn -B verify 
