--- a/pom.xml
+++ b/pom.xml
@@ -86,10 +86,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<doxia.version>1.11.1</doxia.version>
-		<scm.version>1.12.2</scm.version>
-		<junit.version>5.8.2</junit.version>
-		<log4j.version>2.17.2</log4j.version>
+		<doxia.version>2.0.0-M6</doxia.version>
+		<scm.version>2.0.1</scm.version>
+		<junit.version>5.10.0-M1</junit.version>
+		<log4j.version>2.20.0</log4j.version>
 
 		<javadoc.plugin.version>3.3.2</javadoc.plugin.version>
 
@@ -111,7 +111,7 @@
 			<dependency>
 				<groupId>nl.jqno.equalsverifier</groupId>
 				<artifactId>equalsverifier</artifactId>
-				<version>3.10</version>
+				<version>3.14.1</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
@@ -152,7 +152,7 @@
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.22.0</version>
+			<version>3.24.2</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -331,7 +331,7 @@
 					<dependency>
 						<groupId>org.apache.maven.wagon</groupId>
 						<artifactId>wagon-scm</artifactId>
-						<version>3.5.1</version>
+						<version>3.5.3</version>
 					</dependency>
 
 					<dependency>
@@ -396,7 +396,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.6</version>
+				<version>0.8.7</version>
 				<configuration>
 					<excludes>
 						<exclude>it/serendigity/**/HelpMojo.*</exclude>
@@ -490,7 +490,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
-				<version>3.14.0</version>
+				<version>3.15.0</version>
 			</plugin>
 
 		</plugins>
