--- a/pom.xml
+++ b/pom.xml
@@ -676,6 +676,26 @@
             </properties>
             <build>
                 <plugins>
+                    <!-- Staging site -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-site-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>stage-for-scm-publish</id>
+                                <phase>post-site</phase>
+                                <goals>
+                                    <goal>stage</goal>
+                                </goals>
+
+                                <configuration>
+                                    <stagingDirectory>${project.distributionManagement.site.url}</stagingDirectory>
+                                    <topSiteURL>${project.distributionManagement.site.url}</topSiteURL>
+                                    <skipDeploy>true</skipDeploy>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-scm-publish-plugin</artifactId>
@@ -691,7 +711,7 @@
                                 </goals>
 
                                 <configuration>
-                                    <!--<content>${project.build.directory}/staging</content>-->
+                                    <content>${project.build.directory}/staging</content>
                                     <scmBranch>gh-pages</scmBranch>
                                 </configuration>
 
