--- a/pom.xml
+++ b/pom.xml
@@ -689,7 +689,7 @@
                                 </goals>
 
                                 <configuration>
-                                    <stagingDirectory>${project.distributionManagement.site.url}</stagingDirectory>
+                                    <stagingDirectory>${project.distributionManagement.site.url}/staging</stagingDirectory>
                                     <topSiteURL>${project.distributionManagement.site.url}</topSiteURL>
                                     <skipDeploy>true</skipDeploy>
                                 </configuration>
@@ -711,7 +711,7 @@
                                 </goals>
 
                                 <configuration>
-                                    <content>${project.build.directory}/staging</content>
+                                    <content>${project.distributionManagement.site.url}/staging</content>
                                     <scmBranch>gh-pages</scmBranch>
                                 </configuration>
 
