--- a/pom.xml
+++ b/pom.xml
@@ -356,7 +356,7 @@
 
                     <inputDirectory>${site.input.directory}</inputDirectory>
                     <outputDirectory>${site.output.directory}</outputDirectory>
-                    <stagingSiteURL>${project.build}/site/staging</stagingSiteURL>
+                    <stagingSiteURL>${project.build.site}/staging</stagingSiteURL>
                     <topSiteURL>${project.distributionManagement.site.url}</topSiteURL>
                     <skipDeploy>true</skipDeploy>
                 </configuration>
@@ -711,7 +711,7 @@
                                 </goals>
 
                                 <configuration>
-                                    <content>${project.distributionManagement.site.url}/staging</content>
+                                    <content>${project.build.site}/staging</content>
                                     <scmBranch>gh-pages</scmBranch>
                                 </configuration>
 
