--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,10 @@
         <site.output.directory>${project.reporting.outputDirectory}/${site.output.prefix.basedir}
         </site.output.directory>
 
+        <site.output.staging.directory>${project.build.directory}/site-staging
+        </site.output.staging.directory>
+
+
         <site.deploy.rootdir>${user.home}/test/maven_site</site.deploy.rootdir>
         <site.skip.deploy>false</site.skip.deploy>
         <!-- Sonar -->
@@ -356,7 +360,7 @@
 
                     <inputDirectory>${site.input.directory}</inputDirectory>
                     <outputDirectory>${site.output.directory}</outputDirectory>
-                    <stagingSiteURL>${site.output.directory}/staging</stagingSiteURL>
+                    <stagingSiteURL>${site.output.staging.directory}</stagingSiteURL>
                     <topSiteURL>${project.distributionManagement.site.url}</topSiteURL>
                     <skipDeploy>true</skipDeploy>
                 </configuration>
@@ -689,7 +693,7 @@
                                 </goals>
 
                                 <configuration>
-                                    <stagingDirectory>${site.output.directory}/staging</stagingDirectory>
+                                    <stagingDirectory>${site.output.staging.directory}</stagingDirectory>
                                     <topSiteURL>${project.distributionManagement.site.url}</topSiteURL>
                                     <skipDeploy>true</skipDeploy>
                                 </configuration>
@@ -711,7 +715,7 @@
                                 </goals>
 
                                 <configuration>
-                                    <content>${site.output.directory}/staging</content>
+                                    <content>${site.output.staging.directory}</content>
                                     <scmBranch>gh-pages</scmBranch>
                                 </configuration>
 
